--- a/index.html
+++ b/index.html
@@ -6,6 +6,28 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hello</h1>
+    <details>
+        <summary> puspha the rise</summary>
+        <details>
+            <summary> part 1 </summary>
+            <details>
+                <summary> <b> see puspha movie</b></summary>
+            </details>
+            <video controls width="400"autoplay muted>
+            <source src ="./video/855029-hd_1920_1080_30fps (1).mp4"></video>
+        </details>
+    </details>
+    <details>
+        <summary> puspha the rule</summary>
+        <details>
+            <summary> part 2</summary>
+            <details>
+                <summary> see the climax </summary>
+            </details>
+<video controls width="400" autoplay muted>
+<source src="./video/855029-hd_1920_1080_30fps (1).mp4"  type="video/mp4"></video>
+       </details>
+    </details>
+    
 </body>
 </html>
