--- a/index.html
+++ b/index.html
@@ -3,31 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Transitions</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <details>
-        <summary> puspha the rise</summary>
-        <details>
-            <summary> part 1 </summary>
-            <details>
-                <summary> <b> see puspha movie</b></summary>
-            </details>
-            <video controls width="400"autoplay muted>
-            <source src ="./video/855029-hd_1920_1080_30fps (1).mp4"></video>
-        </details>
-    </details>
-    <details>
-        <summary> puspha the rule</summary>
-        <details>
-            <summary> part 2</summary>
-            <details>
-                <summary> see the climax </summary>
-            </details>
-<video controls width="400" autoplay muted>
-<source src="./video/855029-hd_1920_1080_30fps (1).mp4"  type="video/mp4"></video>
-       </details>
-    </details>
-    
+    <h1>Transitions</h1>
+    <div class="container">
+        <div class="item-1 item"><img src="https://i.pinimg.com/736x/33/b0/e8/33b0e800f7dfd660e4b69d19e2c43ad8.jpg" alt=""><p>Moth</p></div>
+        <div class="item-2 item"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSkqgPNNPjAnNM1LBAmXttsmWwnsesYzDe3dw&s" alt=""><p>pathlu</p></div>
+        <div class="item-3 item"><img src="https://w7.pngwing.com/pngs/128/40/png-transparent-crayon-shin-chan-himawari-nohara-manga-television-show-action-kamen-manga-child-food-hand-thumbnail.png" alt=""><p>shinchan</p></div>
+        <div class="item-4 item"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSVmj-GS5CUb5pP2b0sCIb84QXsusJ4DB8VRw&s" alt=""><p>dog</p></div>
+        <div class="item-5 item"><img src="https://i.pinimg.com/736x/b5/fa/b1/b5fab1a8ff1abafe66e862cb96d1285d.jpg" alt=""><p>parrot</p></div>
+        <div class="item-6 item"><img src="https://media.istockphoto.com/id/523761634/photo/cute-panda-bear-climbing-in-tree.jpg?s=612x612&w=0&k=20&c=TxsmORsbuY1LpxQsc6T8fpWJo7lBwncciYhroAr8rXI=" alt=""><p>panda</p></div>
+        <div class="item-7 item"><img src="https://contentgrid.homedepot-static.com/hdus/en_US/DTCCOMNEW/Articles/discover-the-secret-language-of-flowers-2022-hero.jpeg" alt=""><p>flowers</p></div>
+        <div class="item-8 item"><img src="https://eazyarts.in/cdn/shop/files/RLG-064-2.png?v=1726395142&width=1445" alt=""><p>krishna</p></div>
+    </div>
 </body>
 </html>
