--- a/index.html
+++ b/index.html
@@ -3,20 +3,97 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Transitions</title>
+    <title>CSS FLEX BOX</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
-    <h1>Transitions</h1>
     <div class="container">
-        <div class="item-1 item"><img src="https://i.pinimg.com/736x/33/b0/e8/33b0e800f7dfd660e4b69d19e2c43ad8.jpg" alt=""><p>Moth</p></div>
-        <div class="item-2 item"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSkqgPNNPjAnNM1LBAmXttsmWwnsesYzDe3dw&s" alt=""><p>pathlu</p></div>
-        <div class="item-3 item"><img src="https://w7.pngwing.com/pngs/128/40/png-transparent-crayon-shin-chan-himawari-nohara-manga-television-show-action-kamen-manga-child-food-hand-thumbnail.png" alt=""><p>shinchan</p></div>
-        <div class="item-4 item"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSVmj-GS5CUb5pP2b0sCIb84QXsusJ4DB8VRw&s" alt=""><p>dog</p></div>
-        <div class="item-5 item"><img src="https://i.pinimg.com/736x/b5/fa/b1/b5fab1a8ff1abafe66e862cb96d1285d.jpg" alt=""><p>parrot</p></div>
-        <div class="item-6 item"><img src="https://media.istockphoto.com/id/523761634/photo/cute-panda-bear-climbing-in-tree.jpg?s=612x612&w=0&k=20&c=TxsmORsbuY1LpxQsc6T8fpWJo7lBwncciYhroAr8rXI=" alt=""><p>panda</p></div>
-        <div class="item-7 item"><img src="https://contentgrid.homedepot-static.com/hdus/en_US/DTCCOMNEW/Articles/discover-the-secret-language-of-flowers-2022-hero.jpeg" alt=""><p>flowers</p></div>
-        <div class="item-8 item"><img src="https://eazyarts.in/cdn/shop/files/RLG-064-2.png?v=1726395142&width=1445" alt=""><p>krishna</p></div>
+        <div class="item item-1">
+            <span>HOME</span>
+            <span>BAND</span>
+            <span>TOUR</span>
+            <span>CONTACT</span>
+            <span>MORE</span>
+        </div>
+        <div class="item item-2"><i class="bi bi-search"></i></div>
     </div>
+    <h2>Task-1</h2>
+
+    <hr>
+
+    <br><br><br><br><br>
+
+    <div class="zoom">
+        <div class="item1 zoom-item">
+            <i class="bi bi-mic"></i>
+            <p>Audio</p>
+        </div>
+        <div class="item2 zoom-item">
+            <i class="bi bi-camera-video-off"></i>
+            <p>Video</p>
+        </div>
+        <div class="item3 zoom-item">
+            <i class="bi bi-people"></i><sup>17</sup>
+            <p>Participants</p>
+        </div>
+        <div class="item4 zoom-item">
+            <i class="bi bi-chat-left-dots"></i>
+            <p>Chat</p>
+        </div>
+        <div class="item5 zoom-item">
+            <i class="bi bi-arrow-up-square-fill"></i>
+            <p>Share</p>
+        </div>
+            
+        <div class="item6 zoom-item"> 
+            <i class="bi bi-pause-fill"></i>
+            <p>Pause</p>
+        </div>
+        <div class="item7 zoom-item">
+            <i class="bi bi-pencil-square"></i>
+            <p>Annotate</p>
+        </div>
+        <div class="item8 zoom-item">
+            <i class="bi bi-mouse"></i>
+            <p>Remote control</p>
+          
+        </div>
+        <div class="item9 zoom-item">
+            <i class="bi bi-person-video3"></i>
+            <p>Show meeting</p>
+        </div>
+        <div class="item10 zoom-item">
+            <i class="bi bi-three-dots"></i>
+            <p>Share meet</p>
+        </div>
+    </div>
+
+    <div class="zoom2">
+        <div class="zoom21">
+            <i class="bi bi-arrow-90deg-up"></i>
+            <p>You are screen sharing</p>
+            <i class="bi bi-cloud-arrow-down-fill"></i>
+            <i class="bi bi-shield-fill-check"></i>
+        </div>
+        <div class="zoom22">
+            <i class="bi bi-app"></i>
+            <p>Stop Share</p>
+        </div>
+
+    </div>
+
+    <h2>Zoom controls layout</h2>
+
+    <hr>
+
+    <div class="task-3">
+        <p>HOME</p>
+        <p>ABOUT</p>
+        <p>MENU</p>
+        <p>WHERE</p>
+    </div>
+
+    <h2>Task-3</h2>
 </body>
 </html>
